# CoursM2

./: README.md
projetHPC/: CMakeLists.txt  resultats.txt
projetHPC/algonum/: CMakeLists.txt  check_ddot.c  codelet_dgemm.c  codelet_dtrsm.c  test_ddot.c  test_dgemm.c  test_dgetrf.c
projetHPC/algonum/include/: algonum.h  config.h.in
projetHPC/mini-chameleon/: A.txt  B.txt  C.txt  C_apres.txt  README.org  channels.scm  mini-chameleon-dev-ide-manifest.scm  plafrim-formation-env.sh  publish.el  resultats.txt
projetHPC/mini-chameleon/algonum/: check_dgemm.c  check_dgetrf.c  codelet_dgetrf.c  core_dplrnt.c  perf.c  starpu_dlacpy.c  starpu_dplrnt.c  test_ddot.c  test_dgemm.c  test_dgemm_tiled.c  test_dgetrf_cuda.c  test_dgetrf_tiled.c  tile.c
projetHPC/mini-chameleon/algonum/include/: flops.h  perf.h
projetHPC/mini-chameleon/myblas/: ddot_seq.c  dgemm_cuda.c  dgemm_omp.c  dgemm_openacc.c  dgemm_seq.c  dgemm_template.c  dgemm_tiled_omp.c  dgemm_tiled_starpu.c  dgemm_vendor.c  dgetrf_omp.c  dgetrf_openacc.c  dgetrf_tiled_mpi.c  dgetrf_tiled_starpu.c  dgetrf_vendor.c  fctlist.c  gemm_mipp.cpp
projetHPC/mini-chameleon/testings/: check_ddot.c  check_ddot.c.save  check_dgemm.c  common.c  perf_dgemm.c  perf_dgetrf.c  warm_ddot.c  warm_dgemm.c  warm_dgetrf.c
projetHPC/mini-chameleon/tutorial/: setup-cisd.org  setup-guix.org  setup-ide.org  setup-plafrim.org  setup.org  step2-vecto.org  step3-omp.org  tuto-chameleon.org
projetHPC/mini_chameleon/: init-evil.el
projetHPC/mini_chameleon/algonum/: codelet_dlacpy.c  codelet_dplrnt.c  starpu.c  test_dgemm_cuda.c
projetHPC/mini_chameleon/algonum/include/: algonum_int.h  codelets.h
projetHPC/mini_chameleon/myblas/: CMakeLists.txt  dgemm_seq.c  dgemm_tiled_mpi.c  dgetrf_tiled_omp.c
projetHPC/mini_chameleon/testings/: check_dgetrf.c  perf_ddot.c
projetHPC/myblas/: dgemm_cublas.c  dgemm_seq.c  dgetrf_cuda.c  dgetrf_seq.c  myblas.h
projetHPC/testings/: CMakeLists.txt
projetHPC/tutorial/: setup-guixmodules.org  step1-sequential.org  step4-mpi.org  step5-cuda.org
